--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "connected-react-router": "^6.8.0",
     "history": "^4.10.1",
     "react": "^16.13.1",
+    "react-hot-loader": "^4.12.20",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
@@ -20,9 +21,7 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "node server.js",
-    "build": "webpack --mode production",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "webpack --mode production"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,11 +47,12 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "express": "^4.17.1",
+    "extract-css-chunks-webpack-plugin": "^4.7.4",
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
-    "react-hot-loader": "^4.12.20",
     "style-loader": "^1.1.3",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
