--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "connected-react-router": "^6.8.0",
     "history": "^4.10.1",
+    "normalizr": "^3.6.0",
     "react": "^16.13.1",
-    "react-hot-loader": "^4.12.20",
     "react-dom": "^16.13.1",
+    "react-hot-loader": "^4.12.20",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
